--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -1,6 +1,6 @@
 languageCode = "en"
 languageName = "English"
-weight = 1
+weight = 2
 title = "Blowfish"
 
 [params]
@@ -8,16 +8,14 @@ title = "Blowfish"
   isoCode = "en"
   rtl = false
   dateFormat = "2 January 2006"
-  logo = "img/blowfish_logo_transparent.png"
-  description = "A powerful, lightweight theme for Hugo."
+  logo = "img/GL.png"
+  description = "Giant Leap ORG di Star Citizen"
 
 [params.author]
-  name = "Blowfish"
-  email = "nuno@n9o.xyz"
-  image = "img/blowfish_logo.png"
-  headline = "A powerful, lightweight theme for Hugo."
-  bio = "A powerful, lightweight theme for Hugo."
+  name = "Morph"
+  image = "img/avatar.png"
+  headline = "Fondatore Giant Leap"
+  bio = "See you in the Verse"
   links = [
-    { x-twitter = "https://twitter.com/burufugu" },
-    { github = "https://github.com/nunocoracao/blowfish" },
+    { x-twitter = "https://twitter.com/morph84" },
   ]
